--- a/entstehung.html
+++ b/entstehung.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bebop</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/jpeg" href="images/favicon.png">
 </head>
 <body>
     <div id="Beboph1"><h1 >Bebop</h1></div>
@@ -30,8 +31,8 @@
         <h3 id="h31">Die Entstehung</h3>
 
         <div class="text">
-            <p>Entwickelte sich in den 1940er-Jahren in den USA als Reaktion auf den kommerziellen Swing
-                Ursprünglich in Jam-Sessions in Clubs wie Mintons Playhouse (New York) entstanden
+            <p>Der Bebop Entwickelte sich in den <mark>1940er-Jahren</mark> in den USA als Reaktion auf den kommerziellen Swing. Er entstand 
+                Ursprünglich in Jam-Sessions, in Clubs wie Mintons Playhouse <mark>(New York)</mark>.
                 Musiker wollten mehr kreative Freiheit durch komplexere Harmonien und schnelle Improvisationen</p>   
         </div>
         
